--- a/Index.html
+++ b/Index.html
@@ -21,7 +21,6 @@
 
     <header>
         <h1>Piyush Choudhary</h1>
-        <p>Web Developer</p>
     </header>
 
     <section id="about">
@@ -54,6 +53,7 @@
             <li>HTML5</li>
             <li>CSS3</li>
             <li>JavaScript</li>
+            <li>SEO</li>
 
             <!-- Add more skills as needed -->
         </ul>
@@ -62,7 +62,7 @@
     <section id="contact">
         <h2>Contact Me</h2>
         <p>
-            Feel free to reach out to me for collaboration, projects, or just to say hello!
+            Feel free to reach out to me
         </p>
         Email-piyushcdy2009@gmail.com
         <br>
@@ -70,7 +70,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2023 Your Name. All rights reserved.</p>
+        <p>&copy; 2023 Piyush Choudhary. All rights reserved.</p>
     </footer>
 
     <!-- Remove dark mode toggle -->
