--- a/Index.html
+++ b/Index.html
@@ -59,7 +59,7 @@
     <a href="mr-chrome-99.netlify.app" target="_blank">
         <!-- Other project content like image, title, description, etc. -->
         <img src="Screenshot (13).png" alt="Project 1 Image">
-        <h3 id="Title">Customized Home Chrome Page</h3>
+        <h3 id="Title">Customized Chrome Home Page</h3>
         <p id="Description">This website is made for those wh are bored with chrome's boring Home Page</p>
 </div>
 
