--- a/Index.html
+++ b/Index.html
@@ -43,20 +43,20 @@
         <h3 id="Title">Animated Buttons</h3>
         <p id="Description">This website includes various types of animated buttons to use in future projects</p>
     </a>
-    <a href="structure-of-atom-99.netlify.app" target="_blank">
+    <a href="structure-of-atom-99.netlify.app/" target="_blank">
         <!-- Other project content like image, title, description, etc. -->
         <img src="Screenshot (11).png" alt="Project 1 Image">
         <h3 id="Title">Structure of Atom</h3>
         <p id="Description">This website includes the animation of carbon atom and can be used in Educational Purpose</p>
     </a>
     </a>
-    <a href="potify-99.netlify.app" target="_blank">
+    <a href="potify-99.netlify.app/" target="_blank">
         <!-- Other project content like image, title, description, etc. -->
         <img src="Screenshot (12).png" alt="Project 1 Image">
         <h3 id="Title">Potify Mini Player</h3>
         <p id="Description">This website is a experiment which has the Spotify's player and a Spotify custom Logo</p>
     </a>
-    <a href="mr-chrome-99.netlify.app" target="_blank">
+    <a href="mr-chrome-99.netlify.app/" target="_blank">
         <!-- Other project content like image, title, description, etc. -->
         <img src="Screenshot (13).png" alt="Project 1 Image">
         <h3 id="Title">Customized Chrome Home Page</h3>
