--- a/Index.html
+++ b/Index.html
@@ -43,7 +43,7 @@
         <h3 id="Title">Animated Buttons</h3>
         <p id="Description">This website includes various types of animated buttons to use in future projects</p>
     </a>
-    <a href="https://structure-of-atom-99.netlify.app/" target="_blank">
+    <a href="https://structure-of-atom-99.netlify.app/" target="_main">
         <!-- Other project content like image, title, description, etc. -->
         <img src="Screenshot (11).png" alt="Project 2 Image">
         <h3 id="Title">Structure of Atom</h3>
@@ -60,7 +60,7 @@
         <!-- Other project content like image, title, description, etc. -->
         <img src="Screenshot (13).png" alt="Project 4 Image">
         <h3 id="Title">Customized Chrome Home Page</h3>
-        <p id="Description">This website is made for those wh are bored with chrome's boring Home Page</p>
+        <p id="Description">This website is made for those who are bored with chrome's boring Home Page</p>
 </div>
 
         </div>
