--- a/Index.html
+++ b/Index.html
@@ -37,7 +37,7 @@
             <!-- Projects will be dynamically added here using JavaScript -->
             <!-- Inside your JavaScript code where you dynamically add projects -->
 <div class="project">
-    <a href="https://animated-buttons99.netlify.app/" target="_blank">
+    <a href="https://animated-buttons99.netlify.app/" target="_main">
         <!-- Other project content like image, title, description, etc. -->
         <img src="Screenshot (2).png" alt="Project 1 Image">
         <h3 id="Title">Animated Buttons</h3>
@@ -50,13 +50,13 @@
         <p id="Description">This website includes the animation of carbon atom and can be used in Educational Purpose</p>
     </a>
     </a>
-    <a href="https://potify-99.netlify.app/" target="_blank">
+    <a href="https://potify-99.netlify.app/" target="_main">
         <!-- Other project content like image, title, description, etc. -->
         <img src="Screenshot (12).png" alt="Project 3 Image">
         <h3 id="Title">Potify Mini Player</h3>
         <p id="Description">This website is a experiment which has the Spotify's player and a Spotify custom Logo</p>
     </a>
-    <a href="https://mr-chrome-99.netlify.app/" target="_blank">
+    <a href="https://mr-chrome-99.netlify.app/" target="_main">
         <!-- Other project content like image, title, description, etc. -->
         <img src="Screenshot (13).png" alt="Project 4 Image">
         <h3 id="Title">Customized Chrome Home Page</h3>
