--- a/Index.html
+++ b/Index.html
@@ -87,7 +87,7 @@
         </a>
         <p class="contact-name">Codepen</p>
         <a href= "mailto:piyushcdy2009@gmail.com" class="Gmail">
-            <i class="fa-brands fa-envelope"></i>
+            <i class="fas fa-envelope"></i>
         </a>
         <P class="contact-name">Gmail</P>
     </div>
